k8s/overlays/dev/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cviche-frontend
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: cviche-al2023-nodes
      containers:
      - name: frontend
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
