k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cviche-ingress
spec:
  rules:
    - host: cviche.weill.cornell.edu
